--- a/index.html
+++ b/index.html
@@ -171,10 +171,10 @@
 
     </div>
 
-    <ul class="navbar">
-      <li><a style="text-decoration:none" href="index.html">Home</a></li>
-      <li><a style="text-decoration:none" href="#">Blog</a></li>
-      <li><a style="text-decoration:none" href="sample.html">Sample Page</a></li>
+      <ul class="navbar">
+      <li><a href="index.html" style="text-decoration:none">Home</a></li>
+      <li><a href="#" style="text-decoration:none">Blog</a></li>
+      <li><a href="sample.html" style="text-decoration:none">Sample Page</a></li> 
     </ul>
 
     <img src="image/image-1-2.png" class="img">
